syntax = "proto3";

option csharp_namespace = "GrpcPresentation";

package level;

service Level {
  rpc GetLevels (LevelsRequest) returns (LevelsReply);
  rpc SayHello (HelloRequest2) returns (HelloReply2);
}

message LevelsRequest{
	int32 userId = 1;
}

message LevelsReply{
	repeated LevelModel levels = 1;
}

message LevelModel{
	int32 levelId = 1;
  string title = 2;
  int32 timeInSum = 3;
  int32 progress = 4;
}

// The request message containing the user's name.
message HelloRequest2 {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply2 {
  string message = 1;
}